--- a/index.ipynb
+++ b/index.ipynb
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -235,6 +235,8 @@
       "application/vnd.plotly.v1+json": {
        "data": [
         {
+         "type": "scatter",
+         "uid": "278f79ca-d00d-11e9-9de4-c34199b60d38",
          "x": [
           "Buenos Aires",
           "Toronto",
@@ -250,10 +252,10 @@
        "layout": {}
       },
       "text/html": [
-       "<div id=\"f4f5fbde-6ca4-4389-94dd-6a0d6979df27\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"f4f5fbde-6ca4-4389-94dd-6a0d6979df27\", [{\"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [2891000, 2800000, 2581000]}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"762d7c0f-6fad-402c-ac82-4082342591bb\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"762d7c0f-6fad-402c-ac82-4082342591bb\", [{\"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [2891000, 2800000, 2581000], \"type\": \"scatter\", \"uid\": \"27cab350-d00d-11e9-9de4-c34199b60d38\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"f4f5fbde-6ca4-4389-94dd-6a0d6979df27\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"f4f5fbde-6ca4-4389-94dd-6a0d6979df27\", [{\"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [2891000, 2800000, 2581000]}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"762d7c0f-6fad-402c-ac82-4082342591bb\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"762d7c0f-6fad-402c-ac82-4082342591bb\", [{\"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [2891000, 2800000, 2581000], \"type\": \"scatter\", \"uid\": \"27cab350-d00d-11e9-9de4-c34199b60d38\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ]
      },
      "metadata": {},
@@ -262,6 +264,7 @@
    ],
    "source": [
     "trace_first_three_pops = {'x': x_values, 'y': y_values}\n",
+    "\n",
     "\n",
     "\n",
     "plotly.offline.iplot([trace_first_three_pops])"
