Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -399,6 +399,7 @@
           "Pyeongchang"
          ],
          "type": "bar",
+         "uid": "90e0855e-d00d-11e9-9de4-c34199b60d38",
          "x": [
           "Buenos Aires",
           "Toronto",
@@ -418,6 +419,7 @@
           "Pyeongchang"
          ],
          "type": "bar",
+         "uid": "90e08810-d00d-11e9-9de4-c34199b60d38",
          "x": [
           "Buenos Aires",
           "Toronto",
@@ -433,10 +435,10 @@
        "layout": {}
       },
       "text/html": [
-       "<div id=\"1d0209d0-0507-4124-904d-e8327b9b1007\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"1d0209d0-0507-4124-904d-e8327b9b1007\", [{\"type\": \"bar\", \"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [2891000, 2800000, 2581000], \"text\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"name\": \"Population\"}, {\"type\": \"bar\", \"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [4758, 2731571, 3194], \"text\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"name\": \"Area\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"982e6b8b-fac3-4ff5-8a79-be9d885a5ca3\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"982e6b8b-fac3-4ff5-8a79-be9d885a5ca3\", [{\"name\": \"Population\", \"text\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [2891000, 2800000, 2581000], \"type\": \"bar\", \"uid\": \"90e8bfee-d00d-11e9-9de4-c34199b60d38\"}, {\"name\": \"Area\", \"text\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [4758, 2731571, 3194], \"type\": \"bar\", \"uid\": \"90e8c430-d00d-11e9-9de4-c34199b60d38\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"1d0209d0-0507-4124-904d-e8327b9b1007\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"1d0209d0-0507-4124-904d-e8327b9b1007\", [{\"type\": \"bar\", \"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [2891000, 2800000, 2581000], \"text\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"name\": \"Population\"}, {\"type\": \"bar\", \"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [4758, 2731571, 3194], \"text\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"name\": \"Area\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"982e6b8b-fac3-4ff5-8a79-be9d885a5ca3\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"982e6b8b-fac3-4ff5-8a79-be9d885a5ca3\", [{\"name\": \"Population\", \"text\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [2891000, 2800000, 2581000], \"type\": \"bar\", \"uid\": \"90e8bfee-d00d-11e9-9de4-c34199b60d38\"}, {\"name\": \"Area\", \"text\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [4758, 2731571, 3194], \"type\": \"bar\", \"uid\": \"90e8c430-d00d-11e9-9de4-c34199b60d38\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ]
      },
      "metadata": {},
